update: all package.json

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@next/font": "13.1.1",
     "contentful": "^9.2.14",
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
+    "eslint-config-next": "^13.1.1",
+    "next": "^13.1.1",
     "next-sitemap": "^3.1.43",
     "nprogress": "^0.2.0",
     "preact": "^10.11.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "slug": "^8.2.2",
     "slugify": "^1.6.5"
   },
